--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <title>Print The rabbit</title>
   </head>
   <body>
-    <section id="hero" class="container-fluid">
+    <section
+      id="hero"
+      class="container-fluid d-flex justify-content-center align-items-center"
+    >
       <div
         class="container d-flex justify-content-center align-items-center text-center flex-column gap-3"
       >
@@ -35,10 +38,10 @@
             class="d-flex align-items-center justify-content-center flex-column flex-md-row gap-2 text-center text-uppercase mt-3"
           >
             <img src="./assets/img/rabbit.png" alt="rabbit" />
-            <h2>9% TAX RABBIT REWARDS</h2>
+            <h2>9% TAX</h2>
           </div>
           <div
-            class="d-flex align-items-center justify-content-center flex-column flex-md-row gap-2 text-center text-uppercase mt-3"
+            class="d-flex align-items-center justify-content-center flex-column flex-md-row column-gap-2 text-center text-uppercase mt-3"
           >
             <img src="./assets/img/rabbit.png" alt="rabbit" />
             <h2>Renounced contract</h2>
