--- a/index.html
+++ b/index.html
@@ -18,43 +18,29 @@
     <title>Print The rabbit</title>
   </head>
   <body>
-    <section
-      id="hero"
-      class="container-fluid d-flex justify-content-center align-items-center"
-    >
+    <section id="hero" class="container-fluid">
       <div
-        class="container d-flex justify-content-center align-items-center text-center flex-column gap-3"
+        class="container d-flex justify-content-center align-items-center flex-column gap-4"
       >
-        <h1 class="title text-uppercase">print the rabbit</h1>
+        <h1 class="title text-center text-uppercase">print the ribbit</h1>
         <img src="./assets/img/logo.png" alt="logo" />
       </div>
     </section>
 
-    <section id="tokenomics" class="container-fluid">
-      <div class="container">
-        <div class="con d-flex flex-column gap-3">
-          <h1 class="title text-center">tokenomics</h1>
-          <div
-            class="d-flex align-items-center justify-content-center flex-column flex-md-row gap-2 text-center text-uppercase mt-3"
-          >
-            <img src="./assets/img/rabbit.png" alt="rabbit" />
-            <h2>9% TAX</h2>
-          </div>
-          <div
-            class="d-flex align-items-center justify-content-center flex-column flex-md-row column-gap-2 text-center text-uppercase mt-3"
-          >
-            <img src="./assets/img/rabbit.png" alt="rabbit" />
-            <h2>Renounced contract</h2>
-          </div>
-          <div
-            class="d-flex align-items-center justify-content-center flex-column flex-md-row gap-2 text-center text-uppercase mt-3"
-          >
-            <img src="./assets/img/rabbit.png" alt="rabbit" />
-            <h2>Locked liquidity</h2>
-          </div>
+    <main>
+      <section id="about" class="container-fluid">
+        <div
+          class="container d-flex flex-column justify-content-center align-items-center"
+        >
+          <h1 class="title text-uppercase text-center">$PR Tokenomics</h1>
+          <ul class="mt-4 d-flex flex-column list-unstyled text-center gap-3">
+            <li>9% TAX Ribbit rewards</li>
+            <li>Renounced contract</li>
+            <li>Locked liquidity</li>
+          </ul>
         </div>
-      </div>
-    </section>
+      </section>
+    </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N"
