--- a/index.html
+++ b/index.html
@@ -40,6 +40,61 @@
           </ul>
         </div>
       </section>
+
+      <section id="roadmap" class="container-fluid">
+        <div class="container">
+          <h1 class="title text-uppercase text-center">roadmap</h1>
+
+          <div
+            class="row align-items-center justify-content-between row-gap-4 mt-4"
+          >
+            <div
+              class="col-lg-4 px-md-5 px-3 d-flex flex-column gap-3 justify-content-center align-items-center"
+            >
+              <img src="./assets/img/logo.png" alt="logo" class="logo" />
+              <h2 class="head text-uppercase">phase 1</h2>
+              <span class="d-block line"></span>
+              <ul
+                class="d-flex flex-column gap-2 align-items-center text-center list-unstyled"
+              >
+                <li>social Creation</li>
+                <li>launch</li>
+                <li>initial marketing</li>
+                <li>website</li>
+              </ul>
+            </div>
+            <div
+              class="col-lg-4 px-md-5 px-3 d-flex flex-column gap-3 justify-content-center align-items-center"
+            >
+              <img src="./assets/img/logo.png" alt="logo" class="logo" />
+              <h2 class="head text-uppercase">phase 2</h2>
+              <span class="d-block line"></span>
+              <ul
+                class="d-flex flex-column gap-2 align-items-center text-center list-unstyled"
+              >
+                <li>heavy marketing</li>
+                <li>cmc listing</li>
+                <li>cg listing</li>
+                <li>eth trending</li>
+              </ul>
+            </div>
+            <div
+              class="col-lg-4 px-md-5 px-3 d-flex flex-column gap-3 justify-content-center align-items-center"
+            >
+              <img src="./assets/img/logo.png" alt="logo" class="logo" />
+              <h2 class="head text-uppercase">phase 1</h2>
+              <span class="d-block line"></span>
+              <ul
+                class="d-flex flex-column gap-2 align-items-center text-center list-unstyled"
+              >
+                <li>website v2</li>
+                <li>30k holders</li>
+                <li>50m mc</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
