--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     />
     <link rel="icon" href="./assets/img/logo.png" />
     <link rel="stylesheet" href="./assets/styles/style.css" />
-    <title>Print The rabbit</title>
+    <title>Print The ribbit</title>
   </head>
   <body>
     <section id="hero" class="container-fluid">
@@ -82,7 +82,7 @@
               class="col-lg-4 px-md-5 px-3 d-flex flex-column gap-3 justify-content-center align-items-center"
             >
               <img src="./assets/img/logo.png" alt="logo" class="logo" />
-              <h2 class="head text-uppercase">phase 1</h2>
+              <h2 class="head text-uppercase">phase 3</h2>
               <span class="d-block line"></span>
               <ul
                 class="d-flex flex-column gap-2 align-items-center text-center list-unstyled"
@@ -95,6 +95,12 @@
           </div>
         </div>
       </section>
+
+      <!-- <section id="buy" class="container-fluid">
+        <div class="container">
+          <h1 class="title text-capitalize text-center">how to buy</h1>
+        </div>
+      </section> -->
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js"
